# dtecflex-search

./: .env.example  Home.py  README.md  TB_NOTICIA_RASPADA_filtered.sql  alembic.ini  app.py  config.py  database.py  inserir_noticia.py  pyproject.toml  start_app.sh
.streamlit/: config.toml  style.css
alembic/: env.py
alembic/versions/: 4ad155ca86d2_alterar_colunas_para_boolean.py
backend/exceptions/: auth_exceptions.py
backend/models/: database.py
backend/resources/auth/: auth_service.py
backend/resources/notice/: noticia.py  noticia_repository.py  noticia_service.py
backend/resources/notice_message_devolute/: notice_message_devolute_repository.py  notice_message_devolute_schema.py  notice_message_devolute_service.py
backend/resources/notice_name/: noticia_nome.py  noticia_nome_repository.py  noticia_nome_service.py
backend/resources/search_term/: search_term_repository.py  search_term_service.py
conf/: config.yaml  db_secrets.py  estrutura.yaml  gpt.xml  prompt.txt  rss_conf.xml
migrations/: env.py
migrations/versions/: 32dc0da3388e_initial_migration.py  5a87008f3035_criando_tabela_para_termos_de_busca.py
models/: database.py
pages/: _extract_page.py  _list_names_per_status.py  approve_notices.py  home.py  login.py  my_analysis.py  publish_notices.py  search.py  set_token.py  user_register.py
repositories/: noticia_nome_repository.py  noticia_repository.py
schemas/: noticia.py  noticia_nome.py
services/: __init__.py  noticia_nome_service.py  noticia_service.py
utils/: styles.py
view_components/middleware/: check_auth.py
(+15 files in other folders)
